Теперь все в реакте

--- a/index.html
+++ b/index.html
@@ -1,40 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title></title>
-    <style type="text/css" media="screen">
-              body {
-        height: 200px;
-        background: beige;
-      }
-      .dot {
-        height: 8px; width: 8px;
-        border-radius: 4px; /* скруглённые углы */
-        background: blue;
-        position: absolute;
-      }
-    </style>
+<meta charset="UTF-8">
+<title>Привет, Мир</title>
+<link href="../_css/site.css" rel="stylesheet">
 </head>
 <body>
-    <div>
-        <p id="some2">
-            <button id="some" type="submit">Hello</button>
-        </p>
-    </div>
-    <script type="text/javascript" charset="utf-8">
-        var element = document.getElementById('some');
-        var p = document.getElementById('some2');
-        p.addEventListener('mousedown', function(e){
-        });
-        element.addEventListener('mousedown',function(e){
-            var dot = document.createElement("div");
-            dot.className = "dot";
-            dot.style.left = (event.pageX - 4) + "px";
-            dot.style.top = (event.pageY - 4) + "px";
-            document.body.appendChild(dot);
-            console.log(dot);
-        });
-    </script>
-</body>
+<div class="wrapper">
+<header>
+JAVASCRIPT <span class="amp">и</span> jQUERY: НЕДОСТАЮЩЕЕ&nbsp;РУКОВОДСТВО
+</header>
+<div class="content">
+<div class="main">
+<h1>Привет, Мир</h1>
+<p>Обратите внимание, что вы не увидите этой страницы до тех пор, пока не закроете окно предупреждения. </p>
+</div>
+</div>
+<footer>
+<p>JavaScript и jQuery: Недостающее Руководство, Дэвид МакФарланд.</p>
+</footer>
+</div>
+<script>
+alert("привет, мир");
+</script>
+
+</body> 
 </html>
